# CS4365-llm-ambiguity

./: .gitignore  INSTRUCTIONS.md  Makefile  README.md  requirements.txt
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  logging_config.py  main.py  schemas.py
backend/app/services/: backtest.py  features.py  mock_data.py  optimizer.py  torvik.py
data/: realworld_prompts_sample.jsonl  synthetic_prompts.jsonl
docs/: CHECKPOINT2_FEEDBACK_LLM.md  EXPERIMENT_NOTES.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: ControlPanel.tsx  MetricCard.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: OpponentExplorerPage.tsx  OverviewPage.tsx  ScheduleOptimizerPage.tsx  TrendsPage.tsx
frontend/src/styles/: app.css
outputs/: variant_inventory.csv
outputs/runs/20260303_172833/: responses.jsonl  run_config.json  summary.csv  summary.json
outputs/runs/20260309_144023/: responses.jsonl  run_config.json
outputs/runs/20260309_164134/: responses.jsonl  run_config.json
src/: analyze_outputs.py  generate_variants.py  run_experiments.py  schema.py  utils.py
